First animation using TweenLite

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="content-holder">
       <div class="tools">
-          <img src="img/tool-box.svg"/>
+          <img id="toolBox" src="img/tool-box.svg"/>
           <img src="img/weight-lifter.svg"/>
           <img src="img/crazy-fast.svg"/>
           <img src="img/leaf.png"/>
