--- a/app/index.html
+++ b/app/index.html
@@ -8,18 +8,23 @@
 
 </head>
 <body>
-  <div class="content-holder">
-      <div class="tools">
-          <img id="toolBox" src="img/tool-box.svg"/>
-          <img src="img/weight-lifter.svg"/>
-          <img src="img/crazy-fast.svg"/>
-          <img src="img/leaf.png"/>
-      </div>
+    <div class="controlButtons">
+        <button id="start">Start</button>
+        <button id="pause">Pause</button>
+        <button id="stop">Stop</button>
+        <button id="reverse">Reverse</button>
+    </div>
+    <div class="content-holder">
+        <div class="tools">
+            <img id="toolBox" src="img/tool-box.svg"/>
+            <img id="weightLifter" src="img/weight-lifter.svg"/>
+            <img id="crazy" src="img/crazy-fast.svg"/>
+            <img id="leaf" src="img/leaf.png"/>
+        </div>
 
       <div class="title">
           JavaScript Animation Using
       </div>
-
       <div class="gsapTitle">
           <div class="superman">
               <img src="img/gsap-superhero.svg">
@@ -30,9 +35,10 @@
               </div>
           </div>
       </div>
-
-  </div>
+    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TimelineLite.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/easing/EasePack.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js"></script>
 	<script src="js/bundle.js"></script>
 </body>
