--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,6 @@
 
 </head>
 <body>
-    <div class="controlButtons">
-        <button id="start">Start</button>
-        <button id="pause">Pause</button>
-        <button id="stop">Stop</button>
-        <button id="reverse">Reverse</button>
-    </div>
     <div class="content-holder">
         <div class="tools">
             <img id="toolBox" src="img/tool-box.svg"/>
@@ -36,10 +30,7 @@
           </div>
       </div>
     </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TimelineLite.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/easing/EasePack.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js"></script>
-	<script src="js/bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+  <script src="js/bundle.js"></script>
 </body>
 </html>
